src/objects/AdditionalContactFields__c.object
<CustomObject>
    <description>SFDC1-2301 Additional Contact Fields Object with custom fields from Markit legacy system</description>
    <fields>
        <fullName>AdminResponsibilities__c</fullName>
        <description>SFDC1-2301 Used for MarkitSERV data import. Data from Hornbill</description>
        <inlineHelpText>Notes to provide more information on the Admin Responsibilities of this contact for MarkitSERV</inlineHelpText>
        <label>Admin Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactReference__c</fullName>
        <description>SFDC1-2299 Master-Detail reference to Contact record</description>
        <inlineHelpText>Lookup Reference of the contact connected to the Additional Contact Fields</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Contact Fields</relationshipLabel>
        <relationshipName>AdditionalContactFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastSurveyResponse__c</fullName>
        <description>SFDC1-2301</description>
        <inlineHelpText>URL of last survey response</inlineHelpText>
        <label>Last Survey Response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LeadNotesSales__c</fullName>
        <description>SFDC1-2301 16Apr07 Maps from Lead field if Oppy not created (was non-visible until 23Aug07)</description>
        <inlineHelpText>Sales Lead Notes</inlineHelpText>
        <label>Lead Notes - Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Legacy Id unique field for Additional contact fields. It will be same as parent contact. Create as part of migration exercise</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Legacy Id field for Additional contact fields. It will be same as parent contact. Create as part of migration exercise</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Legacy System field for Additional contact fields. It will be same as parent contact. Created as part of migration exercise</description>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkitSERVContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2301 Used to identify contacts from Hornbill/Service Centre Migration</description>
        <inlineHelpText>Please tick the check box if this contact is a MarkitSERV Contact</inlineHelpText>
        <label>MarkitSERV Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarkitServUserMembership__c</fullName>
        <description>SFDC1-5776 Multi-select picklist field MarkitServ User Membership</description>
        <inlineHelpText>Please select a MarkitServ User Membership value</inlineHelpText>
        <label>MarkitServ User Membership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyside Newsletter</fullName>
                </value>
                <value>
                    <fullName>Credit Centre - CB User</fullName>
                </value>
                <value>
                    <fullName>Credit Centre - NCM User</fullName>
                </value>
                <value>
                    <fullName>Credit Centre - Outage</fullName>
                </value>
                <value>
                    <fullName>Credit Centre - SEF User</fullName>
                </value>
                <value>
                    <fullName>Credit Centre - Vendor User</fullName>
                </value>
                <value>
                    <fullName>DS Match / NCM Users</fullName>
                </value>
                <value>
                    <fullName>DS Match - Equity Only</fullName>
                </value>
                <value>
                    <fullName>DSMatch - Equity Repository</fullName>
                </value>
                <value>
                    <fullName>DSMatch - Outage</fullName>
                </value>
                <value>
                    <fullName>Egains</fullName>
                </value>
                <value>
                    <fullName>EGUS</fullName>
                </value>
                <value>
                    <fullName>FX Matcher</fullName>
                </value>
                <value>
                    <fullName>FX OES</fullName>
                </value>
                <value>
                    <fullName>FX – Only</fullName>
                </value>
                <value>
                    <fullName>FX TradeSTP</fullName>
                </value>
                <value>
                    <fullName>FX TVS - Broker Affirm</fullName>
                </value>
                <value>
                    <fullName>FX TVS - Clearing</fullName>
                </value>
                <value>
                    <fullName>FX TVS - Reporting</fullName>
                </value>
                <value>
                    <fullName>FX Web</fullName>
                </value>
                <value>
                    <fullName>MarkitWire - API Contact</fullName>
                </value>
                <value>
                    <fullName>Markitwire Clearing</fullName>
                </value>
                <value>
                    <fullName>MarkitWire - Credit</fullName>
                </value>
                <value>
                    <fullName>Markitwire - End User</fullName>
                </value>
                <value>
                    <fullName>MarkitWire - Equities</fullName>
                </value>
                <value>
                    <fullName>MarkitWire - FX</fullName>
                </value>
                <value>
                    <fullName>MarkitWire - Rates</fullName>
                </value>
                <value>
                    <fullName>Markitwire - Regulatory Reporting</fullName>
                </value>
                <value>
                    <fullName>Markitwire - Retirement Contact</fullName>
                </value>
                <value>
                    <fullName>Markitwire - Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkitWireUserMembership__c</fullName>
        <description>SFDC1-5776 Multi-select picklist field MarkitWire User Membership</description>
        <inlineHelpText>Please select a MarkitWire User Membership value</inlineHelpText>
        <label>MarkitWire User Membership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC Broker Contacts</fullName>
                </value>
                <value>
                    <fullName>Bank Stats</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Buy &amp; Sellside Working Group</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - ASX</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CB</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CME CB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CME CB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CMECE CB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CMECE EB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CME EB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - CME EB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - EB</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - EUREX CB Equities</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - EUREX CB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - EUREX EB Equities</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - EUREX EB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - ICE CB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - ICE EB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - IDCG</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts – JSCC Affiliate Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts – JSCC Member Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - KRX</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - LCH CB Rates</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts LCH EB Rates – FCM</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - LCH EB Rates - SCM</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - LCHSA CB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - LCHSA EB Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - OCC</fullName>
                </value>
                <value>
                    <fullName>Clearing Contacts - OTC Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessingAdministratorType__c</fullName>
        <description>SFDC1-5775 - Multi-picklist for Processing Administrator Type</description>
        <inlineHelpText>Select the Processing Administrator Type</inlineHelpText>
        <label>Processing Administrator Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FX Administrator</fullName>
                </value>
                <value>
                    <fullName>MarkitWire Administrator</fullName>
                </value>
                <value>
                    <fullName>MTM Administrator</fullName>
                </value>
                <value>
                    <fullName>Regulatory Reporting Administrator</fullName>
                </value>
                <value>
                    <fullName>Trioptima Administrator</fullName>
                </value>
                <value>
                    <fullName>Capitalab Administrator</fullName>
                </value>
                <value>
                    <fullName>Corporate Actions Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>SFDC1-2333 This field&apos;s API Name used to be Product_Data_Regions in Markit SFDC</description>
        <inlineHelpText>This field is required if &quot;Live Products Used&quot; field is populated.</inlineHelpText>
        <label>Subscription</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>REPO FED ADM</fullName>
                </value>
                <value>
                    <fullName>REPO DTCC GCF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Contact Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Additional Contact Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Contact Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AdditionalContactFieldsName</fullName>
        <active>true</active>
        <description>SFDC1-4636 User should not be able to edit this field</description>
        <errorConditionFormula>ISCHANGED(Name)
&amp;&amp; NOT CONTAINS($Profile.Name, &apos;Data Governance&apos;)
&amp;&amp; NOT CONTAINS($Profile.Name, &apos;System Admin&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Additional Account Fields Name is not editable</errorMessage>
    </validationRules>
</CustomObject>